# fabric-emulator

./: .gitignore  .goreleaser.yaml  AUDIT.md  Dockerfile  README.md  cover.out  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docs-site.yml  release.yml
cmd/fabric-emulator/: main.go  main_test.go  subcommands_test.go
docs/: 01-architecture.md  01-quickstart.md  02-api-surface.md  02-installation.md  03-architecture.md  03-roadmap.md  04-configuration.md  04-real-compute.md  05-tls-and-hosts.md  06-data-model-and-seed.md  07-control-plane-api.md  08-onelake.md  09-identity-handshake.md  10-testing.md  11-testing-with-fabric-cicd.md  12-e2e-matrix.md  13-roadmap.md  14-real-compute.md  15-entra-companion.md  15-parity.md  16-semantic-model-references.md  16-warehouse-tds.md  17-parity.md  17-semantic-model-plan.md  18-semantic-model-references.md  19-semantic-model-plan.md  parity.md
docs/parity-snapshots/: v0.1.0.md
e2e/adls-sdk/: driver.py  run.py
e2e/azcopy/: driver.py  run.py
e2e/dbt-fabric/: Dockerfile.dbt  README.md  docker-compose.yml  run.py  runner.py
e2e/dbt-fabricspark/: Dockerfile.dbt  README.md  docker-compose.yml  (+3 more)
portal/: embed.go  index.html  package.json  playwright.config.js  vite.config.js  vitest-setup.js
python/: pyproject.toml
python/fabric_emulator_notebookutils.egg-info/: PKG-INFO  SOURCES.txt
python/notebookutils/: fs.py  lakehouse.py  runtime.py
scripts/: docker-smoke.sh
website/: .gitignore  astro.config.mjs  package.json
(+200 files in other folders)
